# CRUD-application-with-Python-and-Dart

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: simple_crud_backend_ci.yaml
crud_backend/: create_tables.py  main.py  pyproject.toml  requirements.txt
crud_backend/src/controllers/: user_controller.py
crud_backend/src/database/: connection_db_interface.py
crud_backend/src/database/mysql/: connection_mysql_db.py
crud_backend/src/database/sqlite/: connection_sqlite_db.py
crud_backend/src/dependencies/: controllers.py
crud_backend/src/exceptions/: database.py
crud_backend/src/handlers/: database_handler.py  register_hadlers.py
crud_backend/src/models/: user_model.py
crud_backend/src/repositories/: user_repository.py
crud_backend/src/routes/: user_routes.py
crud_backend/src/schemas/: user_schemas.py
crud_backend/src/utils/: create_model_tables.py  regex_validations.py
crud_backend/tests/integration/: conftest.py  test_user_repository.py
crud_backend/tests/mocks/: user_controller_mock.py
crud_backend/tests/unit/: conftest.py  test_user_routes.py
crud_interface/: README.md  pubspec.yaml
crud_interface/android/app/: build.gradle.kts
crud_interface/ios/Runner/: Info.plist
crud_interface/ios/Runner.xcodeproj/: project.pbxproj
crud_interface/lib/: main.dart
crud_interface/linux/: CMakeLists.txt
crud_interface/linux/runner/: my_application.cc
crud_interface/test/: widget_test.dart
crud_interface/web/: index.html  manifest.json
crud_interface/windows/: CMakeLists.txt
(+22 files in other folders)
