[project]
name = "crud-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.2",
    "fastapi>=0.119.0",
    "pymysql>=1.1.2",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
test = [
    "pytest>=8.4.2",
]
